--- a/simple-html-page-server/html/index.html
+++ b/simple-html-page-server/html/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Success!</h1>
 
-<p>My first paragraph.</p>
+<p>Your custom html page is being served!</p>
 
 </body>
 </html>
